--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -46,7 +46,7 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: red;
 }
 
 .present {
@@ -65,7 +65,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  /* padding-top: 1.75rem; */
+
 }
 
 .saveBtn:hover {
